# quantumsec-qkd-odmr-qml

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
docs/: wechat_article.md
refs/: Quantum key distribution through quantum machine learning: a research review.md  references.bib
results/: bb84_metrics.json  kernel_bench.json  metrics.json  odmr_metrics.json
scripts/: run_all.sh
src/qmsl/: cli.py  config.py  utils.py
src/qmsl/datasets/: bb84_numpy.py  bb84_qutip_channel.py  odmr_qutip.py
src/qmsl/eval/: metrics.py  plots.py
src/qmsl/features/: bb84_features.py  odmr_features.py
src/qmsl/kernels/: analytic_fidelity.py  backend_kernel_interface.py  kernel_cirq.py  kernel_cudaq.py  kernel_pennylane.py  kernel_qiskit.py
src/qmsl/models/: baselines.py  classical_ml.py  qsvm.py
tests/: test_kernel_equivalence.py  test_skr_monotonicity.py
