[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmsl"
version = "0.1.0"
description = "Quantum Measurement–Driven Security Lab: QKD (BB84) + ODMR + QML kernels across multiple frameworks."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Student", email="student@example.com"}]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "sympy",
  "joblib"
]

[project.optional-dependencies]
quantum = [
  "qutip",
  "pennylane",
  "qiskit",
  "qiskit-aer",
  "cirq",
  "cudaq"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
